# systemcore-os-public

./: .gitignore  README.md
crosscomp_examples/cpp/: CMakeLists.txt  Dockerfile  README.md  cross.cmake  crosscompile.sh  docker-build.sh  docker-compose.yml
crosscomp_examples/cpp/src/: main.cpp
crosscomp_examples/go/: Dockerfile  crosscompile.sh  docker-build.sh  docker-compose.yml  gosystemcore  main.go
crosscomp_examples/kernel/: Dockerfile  Makefile  README  README.md  build-in-container.sh  crosscompile.sh  docker-build.sh  docker-compose.yml  hello.c
package_examples/hello-world-autostart/: hello-world-autostart_1.0.0.ipk
package_examples/hello-world-socketstart/: hello-world-socketstart_1.0.0.ipk
package_examples/hello-world-socketstart/control/: control  postinst  postrm  prerm
package_examples/hello-world-socketstart/overlay/etc/systemd/system/: hello-world-socketstart.service  hello-world-socketstart.socket
